[tool.poetry]
name = "dj_secret_settings"
version = "0.1.0-alpha.1"
description = "Provide settings to Django from a secret store such as Google Cloud Secrets"
authors = ["Steven Davidson <github@damycra.com>"]
readme = "README.md"
repository = "https://github.com/damycra/dj_secret_settings"
keywords = ["django", "settings", "cloud", "secrets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

google-cloud-secret-manager = { version = "^2.7.0", optional = true}

[tool.poetry.extras]
google_secret_manager = ["google-cloud-secret-manager"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
coverage = "^5.5"
pre-commit = "^2.15.0"
tox = "^3.24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37, py38, py39

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v -E google_secret_manager
    poetry run pytest
"""
